Use ListOrderedMap from Apache Commons to prevent column reordering on rename